Fix screen overflow due to search button
1. Add display: grid to the input search and search button
2. Made it a column and adjust the relative postion of search icon.

Fix:
There was no max-width set on the button which led to overflowing on
smaller device sizes.

--- a/css/style.css
+++ b/css/style.css
@@ -899,6 +899,7 @@ button[data-state="btn-link--arrow"] {
 button.btn-search[data-state="search-icon"] {
   border-radius: 50%;
   background: none;
+  max-width: fit-content;
 }
 
 button[data-state="btn-link--arrow"] > svg {
@@ -1607,6 +1608,11 @@ h3.recipes__wrapper__heading.label-wrapper--full-bleed::after {
 
 /* [ ] todo */
 
+.navigation {
+  display: grid;
+  place-items: center;
+}
+
 .site-search {
   padding-block: 1em;
 }
@@ -1628,10 +1634,11 @@ h3.recipes__wrapper__heading.label-wrapper--full-bleed::after {
 /* todo */
 
 .search-bar {
-  place-items: center;
-  position: relative;
-  display: flex;
-  align-items: baseline;
+  /* place-items: center; */
+  /* position: relative; */
+  display: grid;
+  /* align-items: baseline; */
+  /* max-inline-size: -moz-available; */
 }
 
 .search-bar input {
@@ -1640,12 +1647,12 @@ h3.recipes__wrapper__heading.label-wrapper--full-bleed::after {
   font-family: inherit;
   padding-inline-start: 1em;
   padding-block: 0.5em;
-  width: unset;
+  /* width: unset; */
 }
 
 @media screen and (max-width: 40em) {
   .search-bar input {
-    width: fit-content;
+    /* width: fit-content; */
   }
 }
 
@@ -1660,8 +1667,8 @@ h3.recipes__wrapper__heading.label-wrapper--full-bleed::after {
   cursor: pointer;
   background-color: transparent;
   position: relative;
-  left: -3em;
-  top: 0.3em;
+  left: 10em;
+  top: -2em;
   align-self: baseline;
   color: #ccc;
 }
